<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Rank">

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="109dp"
        android:layout_marginLeft="109dp"
        android:layout_marginTop="91dp"
        android:gravity="center"
        android:text="History"
        android:textAllCaps="true"
        android:textSize="36sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="600dp"
        android:layout_height="300dp"
        android:layout_alignTop="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="254dp"
        android:layout_marginLeft="254dp"
        android:layout_marginTop="184dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/win"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:text="@string/WIN"
                android:textAllCaps="true"
                android:textSize="36sp"
                android:gravity="center"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/win_num"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textAllCaps="true"
                android:textSize="36sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:lineSpacingExtra="36sp"
                android:text="@string/DRAW"
                android:textAllCaps="true"
                android:textSize="36sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/draw_num"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="36sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:lineSpacingExtra="36sp"
                android:text="@string/LOSE"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lose_num"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:lineSpacingExtra="36sp"
                android:textSize="36sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/NewStart"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:text="@string/CONTINUE"
            android:textSize="24sp" />

        <Button
            android:id="@+id/Quit"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/Quit"
            android:textSize="24sp" />

    </LinearLayout>

</RelativeLayout>